1999-07-18  Larry Ewing  <lewing@gimp.org>

	* src/io-xpm.c:
	* src/io-gif.c:
	* src/io-png.c:
	* src/io-jpeg.c: Fix a few memory leaks in the, most of them in
	error cases but one or two in the common case.  There are probably
	a few small ones left.
	
1999-07-18  Mark Crichton  <crichton@gimp.org>

	* configure.in: removed version.h. 

	* src/gdk-pixbuf-io.c (pixbuf_check_tiff): Minor readability
	improvements.

1999-07-17  Mark Crichton  <crichton@gimp.org>

	* src/gdk-pixbuf.c: Removed gdk_pixbuf_free, redundant code.
	(gdk_pixbuf_rotate): Added pixbuf rotation code.
	(gdk_pixbuf_scale): Changed // comments to /* */

	* src/gdk-pixbuf.h (gdk_pixbuf_destroy): Added gdk_pixbuf_destroy
	function to header.

1999-07-16  Larry Ewing  <lewing@gimp.org>

	* src/testpixbuf.c (expose_func): reverted the expose everything
	changes, I'm not sure why these went in.
	(config_func): bring this up to date with the new pixbuf_scale
	semantics.

	* src/gdk-pixbuf-io.c: added a couple of warnings to the module
	loading code so that poeple can diagnose problems better. 

	* src/gdk-pixbuf.c (gdk_pixbux_scale): fix the borkedness, also it
	no longer allocates a new pixbuf, which make things nicer for the
	rest of the code.  Unfortunately there is still a problem with
	scaling rgba images.

1999-07-16  Mark Crichton  <crichton@gimp.org>

	* src/testpixbuf.c (config_func): ConfigureEvent handler.  This
	calls gdk_pixbuf_scale.  However, something is not working.
	N.B.: current pixmap is now stored in user_data with a key of
	"pixmap"

	* src/gdk-pixbuf.c (gdk_pixbuf_scale): Implemented scaling function.
	Something is still borked, however.

1999-07-15  Larry Ewing  <lewing@gimp.org>

	* src/io-jpeg.c (image_load): add raph@gimp.org's fix to the jpeg
	indexing routine

	* src/testpixbuf.c (main): fix up the file routines a little so
	that you can load multiple files given the file names

1999-07-14  Larry Ewing  <lewing@gimp.org>
